[package]
name = "efflux"
version = "2.0.1" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Easy MapReduce and Hadoop Streaming interfaces in Rust"
repository = "https://github.com/whitfin/efflux"
keywords = ["data", "hadoop", "hdfs", "mapreduce", "streaming"]
categories = ["api-bindings", "concurrency", "filesystem", "text-processing"]
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
appveyor = { repository = "whitfin/efflux" }
travis-ci = { repository = "whitfin/efflux" }

[dependencies]
bytelines = "2.2"
twoway = "0.2"
